Fixed timezone issue and added some padding for list items and scrollbar.

--- a/front-end/src/components/panels/list/List.module.css
+++ b/front-end/src/components/panels/list/List.module.css
@@ -4,7 +4,7 @@
     gap: 0.5rem;
     justify-content: flex-start;
     align-items: flex-start;
-    padding: 1.0rem 0;
+    padding: 1.0rem 0.5rem 1.0rem 0;
 
     @container (min-width: 500px) {
         flex-flow: row nowrap;
